--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -390,11 +390,16 @@
 		</div>
 
 		@{
-			string noHayNoticiasEstilo = string.Empty;
+			string noHayNoticiasEstilo = "max-width: 1000px; margin-left: auto; margin-right: auto;";
 
-			if (noticiasTresDias.Count == 0)
+			if (noticiasTresDias.Count > 0 && noticiasSemana.Count == 0)
 			{
-				noHayNoticiasEstilo = "max-width: 1000px; margin-left: auto; margin-right: auto;";
+				noHayNoticiasEstilo = "";
+			}
+
+			if (noticiasSemana.Count > 0)
+			{
+				noHayNoticiasEstilo = "";
 			}
 
 			<div class="noticias-caja" style="background-color: var(--fondoMinimo); border: 2px solid var(--fondoBotonPequeño); display: flex; flex-direction: column; gap: 30px; @noHayNoticiasEstilo">
@@ -412,13 +417,6 @@
 				@if (noticiasSemana.Count > 0)
 				{
 					<div title="@Herramientas.Idiomas.BuscarTexto(idioma, "String2", "Index")">
-						<button class="boton-pequeño" @onclick="CerrarNoticiasSemana" style="padding: 0px; width: fit-content; background-color: transparent;">
-							<div style="max-width: 22px; max-height: 22px;">
-								<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-									<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
-								</svg>
-							</div>
-						</button>
 
 						<Virtualize Context="noticia" Items="noticiasSemana">
 							<ItemContent>
@@ -434,6 +432,16 @@
 						<button class="boton-pequeño" @onclick="CargarNoticiasSemana" style="padding: 15px 30px; width: fit-content;">
 							<div>
 								@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Index")
+							</div>
+						</button>
+					}
+					else
+					{
+						<button class="boton-pequeño" @onclick="CerrarNoticiasSemana" style="padding: 0px; width: fit-content; background-color: transparent;">
+							<div style="max-width: 22px; max-height: 22px;">
+								<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+									<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+								</svg>
 							</div>
 						</button>
 					}
