--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Foro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Foro.razor
@@ -8,7 +8,7 @@
 @if (usuario != null)
 {
     <div style="display: flex; flex-direction: column; gap: 20px;">
-        <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
+        <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
             
             @if (puedeCambiarNombre == true)
             {
@@ -43,6 +43,22 @@
                 </div>
             }
         </div>
+
+        <div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+            <div class="checkbox-caja">
+                <input type="checkbox" class="checkbox-interior" checked="@estadoPortada" @onchange="ClickearCambioPortada">
+            </div>
+
+            <div style="padding-left: 30px;">
+                <div style="margin-bottom: 10px;">
+                    @Herramientas.Idiomas.BuscarTexto(idioma, "String6", "AccountForum")
+                </div>
+
+                <div>
+                    @Herramientas.Idiomas.BuscarTexto(idioma, "String7", "AccountForum")
+                </div>
+            </div>
+        </div>
     </div>
 }
 
@@ -61,6 +77,8 @@
     private bool puedeCambiarNombre = true;
     private bool otroUsuarioUsaNombre = false;
 
+    private string estadoPortada = null;
+
     protected override async Task OnInitializedAsync()
     {
         usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
@@ -77,6 +95,22 @@
                     puedeCambiarNombre = false;
                 }
             }
+
+            if (usuario.ForumIndex == null)
+			{
+				estadoPortada = null;
+			}
+			else
+			{
+				if (usuario.ForumIndex == true)
+				{
+					estadoPortada = "checked";
+				}
+				else
+				{
+					estadoPortada = null;
+				}
+			}
         }
     }
 
@@ -122,6 +156,29 @@
                     usuario.Avatar = avatar;
                 }
             }
+
+            await UserManager.UpdateAsync(usuario);
+        }
+    }
+
+    private async void ClickearCambioPortada()
+    {
+        if (usuario != null)
+        {
+            bool estado = false;
+
+            if (estadoPortada == null)
+            {
+                estadoPortada = "checked";
+                estado = true;
+            }
+            else
+            {
+                estadoPortada = null;
+                estado = false;
+            }
+
+            usuario.ForumIndex = estado;
 
             await UserManager.UpdateAsync(usuario);
         }
