--- a/pepeizqs deals web/Pages/Componentes/Secciones/Foro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Foro.razor
@@ -280,11 +280,20 @@ else if (categoriaId > 0 && postId == 0)
 
                                     <button @onclick="@(e => NavegacionPost(e, post.Id))" class="boton-pequeño" style="padding: 15px 20px; margin-top: 10px; margin-bottom: 10px;">
                                         <div style="display: flex; align-items: center; gap: 20px;">
-                                            <div style="width: 20px;">
+                                            <div style="height: 20px;">
                                                 <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                                                     <path d="M32 32C32 14.3 46.3 0 64 0L320 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-29.5 0 11.4 148.2c36.7 19.9 65.7 53.2 79.5 94.7l1 3c3.3 9.8 1.6 20.5-4.4 28.8s-15.7 13.3-26 13.3L32 352c-10.3 0-19.9-4.9-26-13.3s-7.7-19.1-4.4-28.8l1-3c13.8-41.5 42.8-74.8 79.5-94.7L93.5 64 64 64C46.3 64 32 49.7 32 32zM160 384l64 0 0 96c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-96z" />
                                                 </svg>
                                             </div>
+
+                                            @if (post.Cerrado == true)
+                                            {
+                                                <div style="width: 20px;">
+                                                    <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                                        <path d="M144 144l0 48 160 0 0-48c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192l0-48C80 64.5 144.5 0 224 0s144 64.5 144 144l0 48 16 0c35.3 0 64 28.7 64 64l0 192c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 256c0-35.3 28.7-64 64-64l16 0z"/>
+                                                    </svg>
+                                                </div>
+                                            }
 
                                             <div style="width: 100%;">
                                                 @post.Titulo
@@ -332,6 +341,15 @@ else if (categoriaId > 0 && postId == 0)
 
                                     <button @onclick="@(e => NavegacionPost(e, post.Id))" class="boton-pequeño" style="padding: 15px 20px; margin-top: 10px; margin-bottom: 10px;">
                                         <div style="display: flex; align-items: center; gap: 20px;">
+                                            @if (post.Cerrado == true)
+                                            {
+                                                <div style="width: 20px;">
+                                                    <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                                        <path d="M144 144l0 48 160 0 0-48c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192l0-48C80 64.5 144.5 0 224 0s144 64.5 144 144l0 48 16 0c35.3 0 64 28.7 64 64l0 192c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 256c0-35.3 28.7-64 64-64l16 0z"/>
+                                                    </svg>
+                                                </div>
+                                            }
+                                        
                                             <div style="width: 100%;">
                                                 @post.Titulo
                                             </div>
@@ -415,6 +433,17 @@ else if (categoriaId > 0 && postId > 0)
                                     {
                                         <button @onclick="@(e => BorrarPost(e, postAbierto.Id))" style="width: fit-content; font-size: 14px; padding: 0px; border: 0px; background: transparent; color: var(--colorTextoPeligro);">
                                             @Herramientas.Idiomas.BuscarTexto(idioma, "String14", "Forum")
+                                        </button>
+
+                                         <button @onclick="@(e => CerrarPost(e, postAbierto.Id))" style="width: fit-content; font-size: 14px; padding: 0px; border: 0px; background: transparent; color: var(--colorEnlace);">
+                                            @if (postAbierto.Cerrado == false)
+                                            {
+                                                @Herramientas.Idiomas.BuscarTexto(idioma, "String18", "Forum")
+                                            }
+                                            else
+                                            {
+                                                @Herramientas.Idiomas.BuscarTexto(idioma, "String19", "Forum")
+                                            }
                                         </button>
 
                                         <button @onclick="@(e => FijarPost(e, postAbierto.Id))" style="width: fit-content; font-size: 14px; padding: 0px; border: 0px; background: transparent; color: var(--colorEnlace);">
@@ -560,32 +589,42 @@ else if (categoriaId > 0 && postId > 0)
 
             @if (usuario != null)
             {
-                <div class="caja-foro" style="margin-top: 30px;">
-                    @if (responderPostEnseñar == false)
-                    {
-                        <div>
-                            <button @onclick="@(e => ResponderPostEnseñar(e))" class="boton-pequeño" style="width: fit-content; padding: 10px 15px;">
-                                @Herramientas.Idiomas.BuscarTexto(idioma, "String10", "Forum")
-                            </button>
-                        </div>
-                    }
-                    else
-                    {
-                        <div style="display: flex; flex-direction: column; gap: 20px;">
-                            <textarea type="text" @oninput="@(e => ResponderPostContenidoTexto(e))" class="entrada-texto" rows="6" style="min-width: 50px;" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Forum")" />
+                bool poderResponder = true;
 
-                            <div style="width: 100%; display: flex; align-items: center; gap: 20px; justify-content: space-between;">
-                                <button @onclick="@(e => ResponderPostEnviar(e))" class="boton-pequeño" style="width: fit-content; padding: 10px 15px;">
-                                    @Herramientas.Idiomas.BuscarTexto(idioma, "String13", "Forum")
-                                </button>
+                if (postAbierto.Cerrado == true)
+                {
+                    poderResponder = false;
+                }
 
-                                <button @onclick="@(e => ResponderPostCerrar(e))" class="boton-pequeño" style="width: fit-content; padding: 10px 15px;">
-                                    @Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Forum")
+                if (poderResponder == true)
+                {
+                    <div class="caja-foro" style="margin-top: 30px;">
+                        @if (responderPostEnseñar == false)
+                        {
+                            <div>
+                                <button @onclick="@(e => ResponderPostEnseñar(e))" class="boton-pequeño" style="width: fit-content; padding: 10px 15px;">
+                                    @Herramientas.Idiomas.BuscarTexto(idioma, "String10", "Forum")
                                 </button>
                             </div>
-                        </div>
-                    }
-                </div>
+                        }
+                        else
+                        {
+                            <div style="display: flex; flex-direction: column; gap: 20px;">
+                                <textarea type="text" @oninput="@(e => ResponderPostContenidoTexto(e))" class="entrada-texto" rows="6" style="min-width: 50px;" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Forum")" />
+
+                                <div style="width: 100%; display: flex; align-items: center; gap: 20px; justify-content: space-between;">
+                                    <button @onclick="@(e => ResponderPostEnviar(e))" class="boton-pequeño" style="width: fit-content; padding: 10px 15px;">
+                                        @Herramientas.Idiomas.BuscarTexto(idioma, "String13", "Forum")
+                                    </button>
+
+                                    <button @onclick="@(e => ResponderPostCerrar(e))" class="boton-pequeño" style="width: fit-content; padding: 10px 15px;">
+                                        @Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Forum")
+                                    </button>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                }
             }
         }
     }
@@ -951,6 +990,16 @@ else if (categoriaId > 0 && postId > 0)
         if (id > 0)
         {
             BaseDatos.Foro.Actualizar.Fijo(id);
+
+            postAbierto = BaseDatos.Foro.Buscar.Post(id);
+        }
+    }
+
+    private void CerrarPost(MouseEventArgs e, int id)
+    {
+        if (id > 0)
+        {
+            BaseDatos.Foro.Actualizar.Cerrado(id);
 
             postAbierto = BaseDatos.Foro.Buscar.Post(id);
         }
